<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ImageView
	android:id="@+id/imageView"
	android:layout_width="wrap_content"
	android:layout_height="140dp"
	android:layout_marginStart="8dp"
	android:layout_marginTop="4dp"
	android:scaleType="fitStart"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintTop_toTopOf="parent"
	app:srcCompat="@drawable/background" />

  <ImageView
	android:id="@+id/imageView2"
	android:layout_width="120dp"
	android:layout_height="120dp"
	android:layout_marginStart="8dp"
	android:layout_marginBottom="8dp"
	app:layout_constraintBottom_toBottomOf="@+id/imageView"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintTop_toBottomOf="@+id/imageView"
	app:srcCompat="@drawable/profilepic" />

  <TextView
	android:id="@+id/dev_name_text"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:layout_marginStart="8dp"
	android:layout_marginEnd="8dp"
	android:text="@string/dev_name"
	android:textAppearance="@style/TextAppearance.AppCompat.Large"
	app:layout_constraintBottom_toTopOf="@+id/dev_role_text"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintHorizontal_bias="0.0"
	app:layout_constraintStart_toEndOf="@+id/imageView2"
	app:layout_constraintTop_toBottomOf="@+id/imageView"
	app:layout_constraintVertical_bias="0.361" />

  <TextView
	android:id="@+id/dev_role_text"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:layout_marginStart="8dp"
	android:layout_marginEnd="8dp"
	android:text="@string/dev_role"
	android:textAppearance="@style/TextAppearance.AppCompat.Medium"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintHorizontal_bias="0.0"
	app:layout_constraintStart_toEndOf="@+id/imageView2"
	app:layout_constraintTop_toBottomOf="@id/dev_name_text"
	tools:layout_editor_absoluteY="205dp" />

  <Button
	android:id="@+id/add_friend_button"
	style="@style/Widget.AppCompat.Button.Colored"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:layout_marginStart="16dp"
	android:layout_marginTop="24dp"
	android:text="@string/add_friend_text"
	app:layout_constraintEnd_toStartOf="@id/message_button"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintTop_toBottomOf="@id/dev_role_text" />

  <Button
	android:id="@+id/message_button"
	style="@style/Widget.AppCompat.Button.Colored"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="24dp"
	android:text="@string/message_text"
	app:layout_constraintEnd_toStartOf="@id/remove_button"
	app:layout_constraintStart_toEndOf="@id/add_friend_button"
	app:layout_constraintTop_toBottomOf="@id/dev_role_text" />

  <Button
	android:id="@+id/remove_button"
	style="@style/Button"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="24dp"
	android:layout_marginEnd="16dp"
	android:text="@string/remove_text"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toEndOf="@id/message_button"
	app:layout_constraintTop_toBottomOf="@id/dev_role_text" />

</androidx.constraintlayout.widget.ConstraintLayout>